# project_shopping_cart

./: README.md  poem.txt  pyproject.toml  trending_product.md
blog-posts/: 1.md
db/: chroma.sqlite3
src/project_shopping_cart/: main.py
src/project_shopping_cart/crews/product_content_crew/: product_content_crew.py
src/project_shopping_cart/crews/product_content_crew/config/: agents.yaml  tasks.yaml
src/project_shopping_cart/crews/shopping_crew/: shopping_crew.py
src/project_shopping_cart/crews/shopping_crew/config/: agents.yaml  tasks.yaml
